[develop]  Ermittlung statistischer Werte

--- a/public/template/test_leer.html
+++ b/public/template/test_leer.html
@@ -1,175 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Datenanalyse</title>
+<section>
+    <div class="row content-section text-center">
 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="description" content="Datenanalyse" />
-        <meta name="author" content="Staphan Krauß" />
+        <div class="content-section-heading">
+            <h2 class="mb-5">Test leer</h2>
+        </div>
 
-        <!-- Favicon -->
-        <link rel="shortcut icon" href="../img/favicon.png">
+        <div class="col-lg-3 col-md-2 col-sm-1"></div>
 
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
+            leere Testdatei
+        </div>
 
-        <!-- Tabulator CSS -->
-        <link href="../tabulator/css/tabulator.min.css" rel="stylesheet">
+        <div class="col-lg-3 col-md-2 col-sm-1">
+    </div>
+</section>
 
-        <!-- Own CSS -->
-        <link rel="stylesheet" href="../own/own.css">
+<!-- Beispiel -->
+<section>
+    <div class="row content-section text-center">
 
-        <!-- jQuery library -->
-        <script src="../jquery/jquery-3.6.0.js"></script>
+        <div class="col-lg-3 col-md-2 col-sm-1"></div>
 
-        <!-- Latest compiled JavaScript -->
-        <script src="../js/bootstrap.min.js"></script>    
+        <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
 
-        <!-- View Engine -->
-        <script type="text/javascript" src="../viewEngine/jquery.view-engine.min.js"></script>
+            <!--
+            <canvas id="myChart"></canvas>
+            -->
 
-        <!-- JQuery Tabulator -->
-        <script type="text/javascript" src="../tabulator/js/tabulator.min.js"></script>   
+            <!-- Javascript
+            <script type="text/javascript" src=""></script>
+             -->
+            
+        </div>
 
-        <!-- Chart JS -->
-        <script src="../chartjs/chart.min.js" type="text/javascript"></script>
-        
-    </head>
-    <body>
-        <nav class="navbar navbar-default blau" role="navigation">
-            <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <img src="../img/logo.png"><a class="navbar-brand" href="/">Datenanalyse in Echtzeit</a>
-                </div>
-        
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse navbar-ex1-collapse navbar-margin">
-                    <ul class="nav navbar-nav">
-                        {% for bla in navigation %}
-                            <li><a href="{{ bla.link }}">> {{ bla.linkText }}</a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-            </div>
-        </nav>
-
-        <section>
-            <div class="row content-section text-center">
-
-                <div class="content-section-heading">
-                    <h2 class="mb-5">Test leer</h2>
-                </div>
-
-                <div class="col-lg-3 col-md-2 col-sm-1"></div>
-
-                <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
-                    leere Testdatei
-                </div>
-
-                <div class="col-lg-3 col-md-2 col-sm-1">
-            </div>
-        </section>
-
-        <!-- Beispiel -->
-        <section>
-            <div class="row content-section text-center">
-
-                <div class="col-lg-3 col-md-2 col-sm-1"></div>
-
-                <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
-
-                    <canvas id="myChart"></canvas>
-
-
-                    <script type="text/javascript">
-                        <!-- Content -->
-
-
-
-
-
-                        <!-- End Content -->
-                    </script>
-                </div>
-
-                <div class="col-lg-3 col-md-2 col-sm-1">
-            </div>
-        </section>
-
-        <footer class="blau">
-
-            <div class="container">
-                <a href="/">
-                    <img src="../img/logo.png">
-                </a>
-                <p><img src="../img/transparent.png"></p>
-                
-                <p>
-                    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />Dieses Werk ist lizenziert unter einer <br><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="text_weiss">Creative Commons Namensnennung - Nicht-kommerziell - Weitergabe unter gleichen Bedingungen<br> 4.0 International Lizenz</a>.
-                </p>
-
-                
-                <div>
-                    <p>
-                        Copyright &copy; 2022 , Stephan Krauß
-                    </p>
-                    <p>
-                        Mail: <a href="mailto:info@stephankrauss.de" style="color: #ffffff;">info@stephankrauss.de</a> <br>
-                        Mobil: 0152 / 097 203 78
-                    </p>
-                </div>
-            </div>
-        </footer>
-
-        
-    </body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div class="col-lg-3 col-md-2 col-sm-1">
+    </div>
+</section>
