[develop]  Fehlerbehandlung statistische Werte

--- a/public/template/kennwerte.html
+++ b/public/template/kennwerte.html
@@ -13,9 +13,10 @@
             </p>
 
             <p id="kennwerte">
-                Kennwerte Chlorophyll, zentrale Tendenzen: <br>
+                Kennwerte Chlorophyll, Zentralwerte: <br>
 
                 <ul id="zentralwerte">
+                    <li>Datensätze: <span id="count"></span></li>
                     <li>Min: <span id="min"></span></li>
                     <li>Max: <span id="max"></span></li>
                     <li>Modus: <span id="modus"></span></li>
@@ -23,7 +24,7 @@
                     <li>Mittelwert: <span id="mean"></span></li>
                 </ul> 
 
-                Kennwerte Chlorophyll, Streuungswerte: <br>
+                Kennwerte Chlorophyll, Streuungsmaße: <br>
 
                 <ul id="zentralwerte">
                     <li>Spannweite: <span id="spannweite"></span></li>
