--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -39,13 +39,12 @@
         <!-- statistische Funktionen -->
         <script type="text/javascript" src="/statisticalJs/statistical_function.js"></script>
 
-        <!-- Statistical Tools -->
-        <script type="text/javascript" src="/statisticalJs/statisticsTools.js"></script>
-
-        <!-- Statistical Percentile -->
-        <script type="text/javascript" src="/statisticalJs/percentile-calculator.js"></script>
-
-
+        <!-- Boxplot -->
+        <link rel="stylesheet" type="text/css" href="/boxplot/css/boxplot.css">
+        <script type="text/javascript" src="/boxplot/js/boxplot.js"></script>
+        <!--
+        <script type="text/javascript" src="/boxplot/js/ui_init.js"></script>
+    	-->
 		
 	</head>
 	<body>
