--- a/public/template/kennwerte.html
+++ b/public/template/kennwerte.html
@@ -3,14 +3,15 @@
 
         <div class="content-section-heading">
             <h2 class="mb-5">Kennwerte Chlorophyll</h2>
+
+            <p>
+                <code>URL: <span id="url">/api/reords/baumkataster</span></code>
+            </p>
         </div>
 
         <div class="col-lg-3 col-md-2 col-sm-1"></div>
 
-        <div class="col-lg-3 col-md-4 col-sm-8 col-xs-12 text-left">
-            <p>
-                <code>URL: <span id="url">/api/reords/baumkataster</span></code>
-            </p>
+        <div class="col-lg-3 col-md-4 col-sm-10 col-xs-12 text-left">
 
             <p id="kennwerte">
                 <a href="https://de.statista.com/statistik/lexikon/definition/72/kardinalskala/" target="_blank"> Kennwerte Chlorophyll, Zentralwerte: </a>
@@ -27,21 +28,27 @@
                 <a href="https://de.statista.com/statistik/lexikon/definition/72/kardinalskala/" target="_blank"> Kennwerte Chlorophyll, Streuungsmaße: </a>
 
                 <ul id="streuwerte">
-                    <li> <a href="https://de.statista.com/statistik/lexikon/definition/125/spannweite/" target="_blank"> Spannweite: </a><span id="spannweite"></span></li>
+                    
                     <li> <a href="https://de.statista.com/statistik/lexikon/definition/138/varianz/" target="_blank"> Varianz: </a><span id="varianz"></span></li>
-                    <li> <a href="https://de.statista.com/statistik/lexikon/definition/126/standardabweichung/" target="_blank"> Standardabweichung: </a><span id="standardabweichung"></span></li>
-                    <li> <a href="https://de.wikipedia.org/wiki/Interquartilsabstand_(Deskriptive_Statistik)" target="_blank"> Interquartilsabstand: </a><span id="interquartilsabstand"></span></li>
-                    <li> <a href="https://de.statista.com/statistik/lexikon/definition/106/quantil/" target="_blank"> 1. Quartil: </a><span id="quartile1"></span></li>
-                    <li> <a href="https://de.statista.com/statistik/lexikon/definition/106/quantil/" target="_blank"> 2. Quartil: </a><span id="quartile2"></span></li>
-                    <li> <a href="https://de.statista.com/statistik/lexikon/definition/106/quantil/" target="_blank"> 3. Quartil: </a><span id="quartile3"></span></li>
-                    <li> <a href="https://de.statista.com/statistik/lexikon/definition/106/quantil/" target="_blank"> 4. Quartil: </a><span id="quartile4"></span></li>
+                    <li> <a href="https://de.statista.com/statistik/lexikon/definition/126/standardabweichung/" target="_blank"> Standardabweichung: </a><span id="
+                        standardabweichung"></span></li>
+                    <a href="https://de.wikipedia.org/wiki/Box-Plot" target="_blank"> Boxplot: </a>   
+                    <ul>
+                        <li> <a href="https://de.statista.com/statistik/lexikon/definition/125/spannweite/" target="_blank"> Spannweite: </a><span id="spannweite"></span></li>
+                        <li> <a href="https://de.wikipedia.org/wiki/Interquartilsabstand_(Deskriptive_Statistik)" target="_blank"> Interquartilsabstand: </a><span id="interquartilsabstand"></span></li>
+                        <li> Low: <span id="low"></span></li>
+                        <li> <a href="https://de.statista.com/statistik/lexikon/definition/106/quantil/" target="_blank"> 1. Quartil: </a><span id="quartile1"></span></li>
+                        <li> <a href="https://de.statista.com/statistik/lexikon/definition/106/quantil/" target="_blank"> 2. Quartil: </a><span id="quartile2"></span></li>
+                        <li> <a href="https://de.statista.com/statistik/lexikon/definition/106/quantil/" target="_blank"> 3. Quartil: </a><span id="quartile3"></span></li>
+                        <li> High: <span id="high"></span></li>
+                    </ul>
                 </ul>
             </p>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-sm-8 col-xs-12">
+        <div class="col-lg-3 col-md-4 col-sm-10 col-lg-offset-0 col-md-offset-0 col-xs-10 col-sm-offset-1 col-xs-offset-1">
             <p> Auswertung Boxplot: </p>
-            <canvas id="graph" height="400" class="col-lg-6 col-md-8 col-sm-10 col-xs-12"></canvas>
+            <canvas id="graph" class="col-lg-12 col-md-12 col-sm-12 col-xs-12" height="400"></canvas>
         </div>
 
         <div class="col-lg-3 col-md-2 col-sm-1">
