--- a/public/template/kennwerte.html
+++ b/public/template/kennwerte.html
@@ -2,7 +2,7 @@
     <div class="row content-section text-center">
 
         <div class="content-section-heading">
-            <h2 class="mb-5">Kennwerte Chlorophyll</h2>
+            <h2 class="mb-5">Kennwerte: 'Chlorophyllgehalt'</h2>
 
             <p>
                 <code>URL: <span id="url">/api/reords/baumkataster</span></code>
