[develop]  Screnshot OpenAPI

--- a/public/template/kennwerte.html
+++ b/public/template/kennwerte.html
@@ -30,8 +30,7 @@
                 <ul id="streuwerte">
                     
                     <li> <a href="https://de.statista.com/statistik/lexikon/definition/138/varianz/" target="_blank"> Varianz: </a><span id="varianz"></span></li>
-                    <li> <a href="https://de.statista.com/statistik/lexikon/definition/126/standardabweichung/" target="_blank"> Standardabweichung: </a><span id="
-                        standardabweichung"></span></li>
+                    <li> <a href="https://de.statista.com/statistik/lexikon/definition/126/standardabweichung/" target="_blank"> Standardabweichung: </a><span id="standardabweichung"></span></li>
                     <a href="https://de.wikipedia.org/wiki/Box-Plot" target="_blank"> Boxplot: </a>   
                     <ul>
                         <li> <a href="https://de.statista.com/statistik/lexikon/definition/125/spannweite/" target="_blank"> Spannweite: </a><span id="spannweite"></span></li>
