[main]  Überarbeitung Readme.md , PhpMetrics

--- a/public/template/home.html
+++ b/public/template/home.html
@@ -1,21 +1,17 @@
- <!-- Startbereich -->
 <section>
     <div class="row content-section text-center">
 
         <div class="content-section-heading">
-            <h2 class="mb-5">Projektbeschreibung</h2>
+            <h2>Projektbeschreibung</h2>
         </div>
 
-        <div class="col-lg-1"></div>
-        <div class="col-lg-3 clo-lg-push-1 col-md-4 col-sm-6 col-xs-12 mb-5 mb-lg-0">
-            Bereich 1a
-        </div>
-        <div class="col-lg-4 col-md-4  col-sm-6 col-xs-12 mb-5 mb-lg-0">
+        <!-- Projektbeschreibung -->
+        <div class="col-lg-3 col-md-2 col-sm-1"></div>
+
+        <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/XmIDlz-uVGs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mb-5 mb-lg-0">
-            Bereich 3a
-        </div>
-        <div class="col-lg-1"></div>
+
+        <div class="col-lg-3 col-md-2 col-sm-1">
     </div>
 </section>
