[develop]  composer.json und Middleware

--- a/public/template/home.html
+++ b/public/template/home.html
@@ -11,6 +11,8 @@
         <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
             <h3>1. Einleitung</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/di5X8kyTSHg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <h3>2. Programmaufbau</h3>
         </div>
 
         <div class="col-lg-3 col-md-2 col-sm-1">
