[develop]  2. Demonstrationsvideo: Installation, Programmaufbau und Datenbasis

--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -94,7 +94,7 @@
                     </p>
                     <p>
                     	Mail: <a href="mailto:info@stephankrauss.de" style="color: #ffffff;">info@stephankrauss.de</a> <br>
-                        Mobil: 0152 / 097 203 78
+                        Mobil: 0152 / 097 203 78 <br>
                     </p>
                 </div>
             </div>
