--- a/public/template/home.html
+++ b/public/template/home.html
@@ -12,7 +12,9 @@
             <h3>1. Einleitung</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/di5X8kyTSHg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-            <h3>2. Programmaufbau</h3>
+            <h3>2. Installation und Programmaufbau</h3>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/UvG9qPsgluY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <div class="col-lg-3 col-md-2 col-sm-1">
