--- a/public/template/home.html
+++ b/public/template/home.html
@@ -16,9 +16,13 @@
 
             <iframe width="560" height="315" src="https://www.youtube.com/embed/UvG9qPsgluY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-            <h3>3. Responsearten des Programmes</h3>
+            <h3>3. Responsetypen des Programmes</h3>
 
             <iframe width="560" height="315" src="https://www.youtube.com/embed/A1AXW009tS8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <h3>4. Statistische Daten in Textform</h3>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/vuvyyVm85d8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <div class="col-lg-3 col-md-2 col-sm-1">
