--- a/public/template/home.html
+++ b/public/template/home.html
@@ -23,6 +23,10 @@
             <h3>4. Statistische Daten in Textform</h3>
 
             <iframe width="560" height="315" src="https://www.youtube.com/embed/vuvyyVm85d8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <h3>5. Statistische Daten als Tabelle</h3>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Ket-9wy2juI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <div class="col-lg-3 col-md-2 col-sm-1">
