[develop]  Festlegung der Lizenz und Quellenangaben

--- a/public/own/own.css
+++ b/public/own/own.css
@@ -4,6 +4,13 @@
 	background-color: #3f7ea5;
 }
 
+.blau_lizenz{
+	background-color: #3f7ea5;
+	padding-top:  10px;
+	padding-bottom:  10px;
+	color:  white;
+}
+
 .text_weiss{
 	color: white;
 }
