--- a/public/template/home.html
+++ b/public/template/home.html
@@ -9,24 +9,43 @@
         <div class="col-lg-3 col-md-2 col-sm-1"></div>
 
         <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
+
+            <h3>Vorteile des Programmes</h3>
+
+            <p style="text-align: left;">
+                Dieses Programm dient der Darstellung von unternehmenskritischen Daten im Intranet einer Firma.<br>
+                Die Vorteile sind: <br>
+                <ul style="text-align: left;">
+                    <li>Darstellung der Daten in Echtzeit</li>
+                    <li>Verwendung von Methoden der beschreibenden Statistik</li>
+                    <li>Optimierung des finanziellen und personellen Aufwandes</li>
+                    <li>Eine Nutzung des Programmes ist durch Programmieranfänger möglich</li>
+                </ul>
+            </p>
+
+            <h3>Was ist beschreibende Statistik ?</h3>
+
+            <p style="text-align: left;">
+                Die deskriptive (auch: beschreibende) Statistik hat zum Ziel, empirische Daten (z. B. Ergebnisse aus Experimenten) <br>
+                durch Tabellen, Kennzahlen (auch: Maßzahlen oder Parameter) und Grafiken übersichtlich darzustellen und zu ordnen. <br>
+                Dies ist vor allem bei umfangreichem Datenmaterial sinnvoll, da dieses nicht leicht überblickt werden kann. <br>
+                Quelle: <a href="https://de.wikipedia.org/wiki/Deskriptive_Statistik" target="_blank">Wikipedie</a>
+            </p>
+
             <h3>1. Einleitung</h3>
+
             <iframe width="560" height="315" src="https://www.youtube.com/embed/di5X8kyTSHg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-            <h3>2. Installation und Programmaufbau</h3>
+            <h3>Lizenz des Programmes</h3>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/UvG9qPsgluY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-            <h3>3. Responsetypen des Programmes</h3>
-
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/A1AXW009tS8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-            <h3>4. Statistische Daten in Textform</h3>
-
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/vuvyyVm85d8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-            <h3>5. Statistische Daten als Tabelle</h3>
-
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Ket-9wy2juI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p style="text-align: left;">
+                Ich veröffentliche dieses Programm unter der <a href="https://de.wikipedia.org/wiki/MIT-Lizenz" target="_blank">MIT-Lizenz</a>. <br>
+                Diese Lizenz kommt mit folgendem Zusatz zur Anwendung.<br>
+                Im Frontendbereich der Anwendung muss jederzeit folgender Zusatz erkennbar sein:<br>
+            </p>
+            <p style="text-align: left;">
+                <span class="blau_lizenz"><b>Programm 'Statistik-Katze' , ursprüngliche Programmierung Stephan Krauß: <a href="mailto:info@stephankrauss.de" style="color: white;">info@stephankrauss.de</a></b></span>
+            </p>
         </div>
 
         <div class="col-lg-3 col-md-2 col-sm-1">
