--- a/public/template/kennwerte.html
+++ b/public/template/kennwerte.html
@@ -14,7 +14,7 @@
         <div class="col-lg-3 col-md-4 col-sm-10 col-xs-12 text-left">
 
             <p id="kennwerte">
-                <a href="https://de.statista.com/statistik/lexikon/definition/72/kardinalskala/" target="_blank"> Kennwerte Chlorophyll, Zentralwerte: </a>
+                <a href="https://de.statista.com/statistik/lexikon/definition/72/kardinalskala/" target="_blank"> Kennwerte 'Chlorophyll', Zentralwerte: </a>
 
                 <ul id="zentralwerte">
                     <li>Anzahl Datensätze: <span id="count"></span></li>
@@ -25,7 +25,7 @@
                     <li><a href="https://de.statista.com/statistik/lexikon/definition/91/mittelwert_und_arithmetisches_mittel/" target="_blank"> Mittelwert: </a><span id="mean"></span></li>
                 </ul> 
 
-                <a href="https://de.statista.com/statistik/lexikon/definition/72/kardinalskala/" target="_blank"> Kennwerte Chlorophyll, Streuungsmaße: </a>
+                <a href="https://de.statista.com/statistik/lexikon/definition/72/kardinalskala/" target="_blank"> Kennwerte 'Chlorophyll', Streuungsmaße: </a><br><br>
 
                 <ul id="streuwerte">
                     
@@ -42,6 +42,12 @@
                         <li> High: <span id="high"></span></li>
                     </ul>
                 </ul>
+            </p>
+
+            <p>
+                Quellen der Beschreibung der Kennwerte:<br><br>
+                <a href="https://de.statista.com/statistik/lexikon/definition/11/statistik_fuer_anfaenger_einfuehrung_in_die_statistik/" target="_blank">Statista Lexikon</a><br>
+                <a href="https://de.wikipedia.org/wiki/Wikipedia:Hauptseite" target="_blank">Wikipedia</a>
             </p>
         </div>
 
