--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -80,18 +80,13 @@
                 </a>
                 <p><img src="/img/transparent.png"></p>
             	
-            	<p>
-            		<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />Dieses Werk ist lizenziert unter einer <br><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="text_weiss">Creative Commons Namensnennung - Nicht-kommerziell - Weitergabe unter gleichen Bedingungen<br> 4.0 International Lizenz</a>.
-            	</p>
-
                 
                 <div>
                     <p>
                         Copyright &copy; 2022 , Stephan Krauß
                     </p>
                     <p>
-                    	Mail: <a href="mailto:info@stephankrauss.de" style="color: #ffffff;">info@stephankrauss.de</a> <br>
-                        Mobil: 0152 / 097 203 78 <br>
+                    	<span class="blau_lizenz"><b>Programm 'Statistik-Katze' , ursprüngliche Programmierung Stephan Krauß: <a href="mailto:info@stephankrauss.de" style="color: white;">info@stephankrauss.de</a></b></span>
                     </p>
                 </div>
             </div>
