--- a/public/template/demo2.html
+++ b/public/template/demo2.html
@@ -9,11 +9,17 @@
         <div class="col-lg-3 col-md-2 col-sm-1"></div>
 
         <div class="col-lg-6 col-md-8 col-sm-10 col-xs-12">
+            <h3>4. Statistische Daten in Textform</h3>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/vuvyyVm85d8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            
             <h3>5. Statistische Daten als Tabelle</h3>
 
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Ket-9wy2juI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-            <h3>5. Statistische Daten als Diagramme</h3>
+            <h3>6. Statistische Daten als Diagramme</h3>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ebxwrATKpXM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
 
         <div class="col-lg-3 col-md-2 col-sm-1">
