--- a/public/template/home.html
+++ b/public/template/home.html
@@ -29,12 +29,14 @@
                 Die deskriptive (auch: beschreibende) Statistik hat zum Ziel, empirische Daten (z. B. Ergebnisse aus Experimenten) <br>
                 durch Tabellen, Kennzahlen (auch: Maßzahlen oder Parameter) und Grafiken übersichtlich darzustellen und zu ordnen. <br>
                 Dies ist vor allem bei umfangreichem Datenmaterial sinnvoll, da dieses nicht leicht überblickt werden kann. <br>
-                Quelle: <a href="https://de.wikipedia.org/wiki/Deskriptive_Statistik" target="_blank">Wikipedie</a>
+                Quelle: <a href="https://de.wikipedia.org/wiki/Deskriptive_Statistik" target="_blank">Wikipedia</a>
             </p>
 
-            <h3>1. Einleitung</h3>
+            <h3>Programminformation</h3>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/di5X8kyTSHg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/gwbtkG62jKo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </p>
 
             <h3>Lizenz des Programmes</h3>
 
@@ -44,7 +46,7 @@
                 Im Frontendbereich der Anwendung muss jederzeit folgender Zusatz erkennbar sein:<br>
             </p>
             <p style="text-align: left;">
-                <span class="blau_lizenz"><b>Programm 'Statistik-Katze' , ursprüngliche Programmierung Stephan Krauß: <a href="mailto:info@stephankrauss.de" style="color: white;">info@stephankrauss.de</a></b></span>
+                <span class="blau_lizenz"><b>&nbsp; Programm 'Statistik-Katze' , ursprüngliche Programmierung: Stephan Krauß: <a href="mailto:info@stephankrauss.de" style="color: white;">info@stephankrauss.de</a></b> &nbsp;</span>
             </p>
         </div>
 
