--- a/public/template/home.html
+++ b/public/template/home.html
@@ -46,7 +46,11 @@
                 Im Frontendbereich der Anwendung muss jederzeit folgender Zusatz erkennbar sein:<br>
             </p>
             <p style="text-align: left;">
-                <span class="blau_lizenz"><b>&nbsp; Programm 'Statistik-Katze' , ursprüngliche Programmierung: Stephan Krauß: <a href="mailto:info@stephankrauss.de" style="color: white;">info@stephankrauss.de</a></b> &nbsp;</span>
+                <div class="blau_lizenz">
+                    <b>&nbsp; Programm 'Statistik-Katze' 
+                    <br>ursprüngliche Programmierung: Stephan Krauß:<br>
+                     <a href="mailto:info@stephankrauss.de" style="color: white;">info@stephankrauss.de</a></b> &nbsp;
+                </div>
             </p>
         </div>
 
