--- a/public/template/layout.html
+++ b/public/template/layout.html
@@ -86,7 +86,7 @@
                         Copyright &copy; 2022 , Stephan Krauß
                     </p>
                     <p>
-                    	<span class="blau_lizenz"><b>Programm 'Statistik-Katze' , ursprüngliche Programmierung: Stephan Krauß: <a href="mailto:info@stephankrauss.de" style="color: white;">info@stephankrauss.de</a></b></span>
+                    	<div class="blau_lizenz"><b>Programm 'Statistik-Katze' , ursprüngliche Programmierung: Stephan Krauß: <a href="mailto:info@stephankrauss.de" style="color: white;">info@stephankrauss.de</a></b></div>
                     </p>
                 </div>
             </div>
